# MDAL

./: .gitignore  02-runtime-pipeline.md  03-verification.md  04-trainer-and-fingerprint.md  CLAUDE.md  LICENSE  MDAL-Architekturskizze-v05.docx  MDAL-Architekturskizze.docx  MDAL-Stack-Entscheidung.md  README.md  bearbeitungshinweise.txt  index.md  llm-normalization-layer-anforderungen.md  phasenplanung.txt  planning structured information validation.md  pyproject.toml  requirements.txt
Docs/: 01-system-overview-DE.md  01-system-overview.md  02-runtime-pipeline.md  03-integration-DE.md  03-integration-EN.md  03-verification.md  04-trainer-and-fingerprint-DE.md  04-trainer-and-fingerprint.md  05-proxy-and-operations-DE.md  05-proxy-and-operations.md  06-repository-structure-DE.md  07-file-reference-DE.md  07-file-reference.md  08-domain-model-DE.md  08-domain-model.md  09-decision-model.md  10-operating-principles-DE.md  10-operating-principles.md  11-terms-and-boundaries.md  index-DE.md  index.md  linkedin_artikel_mdal-DE.md  linkedin_artikel_mdal.md
config/: config.html  mdal.yaml  proxy.yaml  train.yaml  trainer_commercial.yaml
logs/: mdal_server_log.md
manuelle_tests/: 03_run_mistral_baseline.py  05_compare_results.py  05_comparison_report v03.md  05_comparison_report.md  llama_chats.json  mistral_baseline_log.json  mistral_mdal_log.json  plan_variante4.md
mdal/: audit.py  config.py  notifier.py  pipeline.py  retry.py  session.py  status.py  transformer.py
plugins/: elements.json  manifest.json
scripts/: comparison_test_commercial.py  run_trainer.py  (+4 more)
(+70 files in other folders)
