[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdal"
version = "0.1.0"
description = "Model-agnostic Delivery Assurance Layer"
requires-python = ">=3.10"
dependencies = [
    # Config & validation
    "pydantic>=2.7",
    "pyyaml>=6.0",
    # HTTP (LLM adapter, OpenAI-compatible APIs)
    "httpx>=0.27",
    # API proxy
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # XML validation (structure checker, Plugin Registry)
    "lxml>=5.2",
    # JSON schema validation
    "jsonschema>=4.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx",  # already in main deps, listed for clarity
    "respx>=0.21",  # httpx mock library
]

[project.scripts]
mdal-server = "mdal.proxy.server:main"
mdal-train  = "mdal.trainer.trainer:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths   = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["mdal"]
